# ChangeLog for app-shells/zsh
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*zsh-5.0.2-r2 (03 Apr 2013)

  03 Apr 2013; Martin Väth <martin@mvath.de>
  Fix compilation with texinfo-5

*zsh-5.0.2-r1 (13 Jan 2013)

  13 Jan 2013; Martin Väth <martin@mvath.de>
  Fix run-help generation by forcing width 80. Install run-help completion.

*zsh-5.0.2 (25 Dec 2012)

  25 Dec 2012; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*zsh-5.0.0 (13 Aug 2012)

  21 Sep 2012; Martin Väth <martin@mvath.de>
  Bump to EAPI=5

  14 Aug 2012; Martin Väth <martin@mvath.de>
  Add comments about the paranoid pipe testing

  13 Aug 2012; Martin Väth <martin@mvath.de>
  Copy from the portage tree to add support for run-help and for removal of
  unrequested completion functions (in particular, do not put them in $fpath).
  Clear previous ChangeLog.