@@ -15,42 +15,45 @@ app-portage/eix:swap-remote - Swap role of remote addresses in eix-remote, makin
 app-portage/eix:tools - Create separate binary for script helper tools; useful if they are called extremely often
 app-shells/auto-fu-zsh:compile - Byte-compile to speed up
 app-shells/termcolors-mv:perl - Install 256colors perl script
-app-shells/zsh:completion_AIX - install completions for AIX
-app-shells/zsh:completion_BSD - install completions for BSD
-app-shells/zsh:completion_Cygwin - install completions for Cygwin
-app-shells/zsh:completion_Darwin - install completions for Darwin
-app-shells/zsh:completion_Debian - install completions for Debian
-app-shells/zsh:completion_Linux - install completions for Linux
-app-shells/zsh:completion_Mandriva - install completions for Mandriva
-app-shells/zsh:completion_Redhat - install completions for Redhat
-app-shells/zsh:completion_Solaris - install completions for Solaris
-app-shells/zsh:completion_Unix - install completions for Unix
-app-shells/zsh:completion_X - install completions for X
-app-shells/zsh:completion_openSUSE - install completions for openSUSE
+app-shells/zsh:completion_AIX - Install zsh completions for AIX
+app-shells/zsh:completion_BSD - Install zsh completions for BSD
+app-shells/zsh:completion_Cygwin - Install zsh completions for Cygwin
+app-shells/zsh:completion_Darwin - Install zsh completions for Darwin
+app-shells/zsh:completion_Debian - Install zsh completions for Debian
+app-shells/zsh:completion_Linux - Install zsh completions for Linux
+app-shells/zsh:completion_Mandriva - Install zsh completions for Mandriva
+app-shells/zsh:completion_Redhat - Install zsh completions for Redhat
+app-shells/zsh:completion_Solaris - Install zsh completions for Solaris
+app-shells/zsh:completion_Unix - Install zsh completions for Unix
+app-shells/zsh:completion_X - Install zsh completions for X
+app-shells/zsh:completion_openSUSE - Install zsh completions for openSUSE
+app-shells/zsh:custom-ctype - Set this and an utf8-capable LC_CTYPE (e.g. in make.conf) if run-help does not work for you. If unset, the value of LC_CTYPE for the generation of run-help is calculated by a heuristic based on locale -a.
 app-shells/zsh:run-help - Create and install data for run-help command
-app-shells/zsh-completion:completion_ack - zsh completion for sys-apps/ack
-app-shells/zsh-completion:completion_android - Android-related zsh completions
-app-shells/zsh-completion:completion_bumblebee - zsh completion for x11-misc/bumblebee
-app-shells/zsh-completion:completion_database - database-related zsh completions
-app-shells/zsh-completion:completion_dev - zsh completions for development (build systems, editors, web)
-app-shells/zsh-completion:completion_disk - zsh completions for disk tools
-app-shells/zsh-completion:completion_distribute - zsh completions for tools for distributing tasks to various machines
-app-shells/zsh-completion:completion_gentoo - Gentoo-related zsh completions
-app-shells/zsh-completion:completion_git - zsh completions for special git tools
-app-shells/zsh-completion:completion_google - zsh completions for googlecl
-app-shells/zsh-completion:completion_haskell - zsh completions for Haskell tools
-app-shells/zsh-completion:completion_managers - zsh completions for various filemanagers (not portage)
-app-shells/zsh-completion:completion_net - zsh completions for various net-related tools
-app-shells/zsh-completion:completion_perf - zsh completion for linux kernel's perf tool
-app-shells/zsh-completion:completion_perl - zsh completion for perl-related tools
-app-shells/zsh-completion:completion_pip - zsh completion for app-misc/pip
-app-shells/zsh-completion:completion_python - zsh completion for python development tools
-app-shells/zsh-completion:completion_ruby - zsh completion for ruby tools and tools in ruby
-app-shells/zsh-completion:completion_session - zsh completion for session-handling frontends
-app-shells/zsh-completion:completion_showoff - zsh completion for showoff
-app-shells/zsh-completion:completion_subtitles - zsh completion for subtitle tools
-app-shells/zsh-completion:completion_virtualbox - zsh completion for virtualbox
-app-shells/zsh-completion:completion_web - zsh completion for web-related tools incl. java/javascript/scala
+app-shells/zsh-completion:completion_Android - Install zsh completions for Android-related programs
+app-shells/zsh-completion:completion_Gentoo - Install zsh completions for Gentoo and portage
+app-shells/zsh-completion:completion_Google - Install zsh completions for googlecl
+app-shells/zsh-completion:completion_Unix - Install zsh completion for unix system tools
+app-shells/zsh-completion:completion_bumblebee - Install zsh completion for x11-misc/bumblebee
+app-shells/zsh-completion:completion_database - Install zsh completions for database programs
+app-shells/zsh-completion:completion_dev - Install zsh completions for development (build systems, editors, web)
+app-shells/zsh-completion:completion_disk - Install zsh completions for disk tools
+app-shells/zsh-completion:completion_distribute - Install zsh completions for tools for distributing tasks to various machines
+app-shells/zsh-completion:completion_dzen - Install zsh completions for x11-misc/dzen
+app-shells/zsh-completion:completion_git - Install zsh completions for special git tools
+app-shells/zsh-completion:completion_haskell - Install zsh completions for Haskell tools
+app-shells/zsh-completion:completion_id3 - Install zsh completions for media-sound/id3 and media-sound/id3v2
+app-shells/zsh-completion:completion_managers - Install zsh completions for various package managers (not portage)
+app-shells/zsh-completion:completion_net - Install zsh completions for various net-related tools
+app-shells/zsh-completion:completion_perf - Install zsh completion for dev-util/perf
+app-shells/zsh-completion:completion_perl - Install zsh completion for perl-related tools
+app-shells/zsh-completion:completion_python - Install zsh completion for python development tools
+app-shells/zsh-completion:completion_ruby - Install zsh completion for ruby tools and tools in ruby
+app-shells/zsh-completion:completion_search - Install zsh completion for search tools like sys-apps/ack and sys-apps/the_silver_searcher
+app-shells/zsh-completion:completion_session - Install zsh completion for session-handling frontends
+app-shells/zsh-completion:completion_showoff - Install zsh completion for showoff
+app-shells/zsh-completion:completion_subtitles - Install zsh completion for subtitle tools
+app-shells/zsh-completion:completion_virtualbox - Install zsh completion for virtualbox
+app-shells/zsh-completion:completion_web - Install zsh completion for web-related tools incl. java/javascript/scala
 app-text/stardict:espeak - Enable text to speech synthesizer using espeak engine
 app-text/stardict:gucharmap - Enable gucharmap dictionary plugin
 app-text/stardict:pronounce - Install WyabdcRealPeopleTTS package (it is just many .wav files) to make StarDict pronounce English words
